integracao com pncp
-busca de contratos publicados
-perisistencia no banco de dados dos contratos
-consulta de contratos persistidos no banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ project.context = LicitMatch
 quarkus.hibernate-orm.database.generation=none
 
 quarkus.datasource.db-kind=postgresql
+
+quarkus.rest-client."br.com.match.licit.pncp.client.PncpClient".url=https://pncp.gov.br/api/consulta
