--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,17 @@ quarkus.hibernate-orm.database.generation=none
 quarkus.datasource.db-kind=postgresql
 
 quarkus.rest-client."br.com.match.licit.pncp.client.PncpClient".url=https://pncp.gov.br/api/consulta
+
+quarkus.rest-client."br.com.match.licit.contracts.client.AiServicesClient".url=http://127.0.0.1:8000/
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:3000
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
+quarkus.http.cors.exposed-headers=location,link
+quarkus.http.cors.access-control-allow-credentials=true
+
+ai-services/mp-rest/connectTimeout=0
+ai-services/mp-rest/readTimeout=0
+
+quarkus.http.limits.max-body-size=2G
